kubernetes/components/networkpolicy/allow-internal/ciliumnetworkpolicy.yaml
---
# CiliumNetworkPolicy: Allow pod-to-pod within namespace
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-internal
spec:
  endpointSelector: {}
  ingress:
    # Allow from same namespace
    - fromEndpoints:
        - {}
  egress:
    # Allow to same namespace
    - toEndpoints:
        - {}
